# LOCKR

./: ECLIPSE_COMPLETE_FINAL_DOCUMENTATION.txt  ECLIPSE_Thermodynamics_Documentation.txt  README.md  lockr-tool-plan.md  lockr-tool-ui-ux-spec.md  phase-1.5-assembly-prompt.md  pyproject.toml
docs/: README.md  assembly.md  calibration.md  charge.md  liability.md  models.md  thermo.md
scripts/: demo.py
src/lockr/: __init__.py  cli.py
src/lockr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/lockr/api/: errors.py  main.py
src/lockr/api/routes/: assembly.py  foldchange.py  scan.py  sweep.py
src/lockr/api/schemas/: assembly.py  common.py  foldchange.py  scan.py  sweep.py
src/lockr/engine/: __init__.py  assembly.py  calibration.py  charge.py  liability.py  models.py  parse_batch.py  thermo.py
src/lockr/web/: index.html
src/lockr/web/static/css/: styles.css
src/lockr/web/static/js/: assembly.js  calculator.js  plot.js  scanner.js  shared.js
tests/: test_api_assembly.py  test_api_foldchange.py  test_api_scan.py  test_api_sweep.py  test_assembly_eclipse.py  test_assembly_general.py  test_charge.py  test_charge_eclipse.py  test_charge_general.py  test_cli.py  test_liability.py  test_liability_eclipse.py  test_liability_general.py  test_thermo.py  test_thermo_eclipse.py  test_thermo_general.py
