[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lockr"
version = "0.1.0"
description = "ECLIPSE LOCKR biosensor design tool — shared thermodynamic engine (iGEM 2026)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vishnu T.", email = "vishnutejastadipatri@gmail.com" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]

[project.scripts]
lockr = "lockr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
